# tsnnls

./: README.md
libtsnnls-2.3.4/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
libtsnnls-2.3.4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libtsnnls-2.3.4/tsnnls/: A_01.sparse  A_02.sparse  A_03.sparse  A_04.sparse  A_05.sparse  A_06.sparse  Makefile  Makefile.am  Makefile.in  b_01.mat  b_02.mat  b_03.mat  b_04.mat  b_05.mat  b_06.mat  f77blas_test  full_example_A.mat  full_example_b.mat  full_example_x.mat  genb_test  genb_test.c  libtsnnls.la  libtsnnls_la-lsqr.lo  libtsnnls_la-tlsqr.lo  libtsnnls_la-tsnnls.lo  rrtestA.sparse  rrtestb.mat  rrtestx.mat  testfull  tlsqr.c  transpose_test  transpose_test.c  tsnnls.c  tsnnls_test.c  x_01.mat  x_02.mat  x_03.mat  x_04.mat  x_05.mat  x_06.mat
libtsnnls-2.3.4/tsnnls/.deps/: f77blas_test.Po  genb_test.Po  libtsnnls_la-lsqr.Plo  libtsnnls_la-tlsqr.Plo  libtsnnls_la-tsnnls.Plo  transpose_test.Po
libtsnnls-2.3.4/tsnnls/.libs/: genb_test  libtsnnls.la  libtsnnls.lai  libtsnnls.so.0.0.0  transpose_test
libtsnnls-2.3.4/tsnnls/taucs_basic/: Makefile  Makefile.in  libtsnnls_la-amdbar.lo  libtsnnls_la-amdexa.lo  libtsnnls_la-amdtru.lo  libtsnnls_la-colamd.lo  libtsnnls_la-genmmd.lo  libtsnnls_la-taucs_ccs_base.lo  libtsnnls_la-taucs_ccs_ops.lo  libtsnnls_la-taucs_ccs_order.lo  libtsnnls_la-taucs_complex.lo  libtsnnls_la-taucs_logging.lo  libtsnnls_la-taucs_malloc.lo  libtsnnls_la-taucs_sn_llt.lo  libtsnnls_la-taucs_timer.lo  libtsnnls_la-taucs_vec_base.lo  taucs_sn_llt.c
libtsnnls-2.3.4/tsnnls/taucs_basic/.deps/: libtsnnls_la-amdbar.Plo  libtsnnls_la-amdexa.Plo  libtsnnls_la-amdtru.Plo  libtsnnls_la-colamd.Plo  libtsnnls_la-genmmd.Plo  libtsnnls_la-taucs_ccs_base.Plo  libtsnnls_la-taucs_ccs_ops.Plo  libtsnnls_la-taucs_ccs_order.Plo  libtsnnls_la-taucs_complex.Plo  libtsnnls_la-taucs_logging.Plo  libtsnnls_la-taucs_malloc.Plo  libtsnnls_la-taucs_sn_llt.Plo  libtsnnls_la-taucs_timer.Plo  libtsnnls_la-taucs_vec_base.Plo
libtsnnls-2.3.4/win32/: BUILDING.txt  tsnnls.sln  tsnnls.vcproj
libtsnnls-2.3.4/win32/lib/: libraries.txt
test_c_code/: a.out  solver.c
tsnnls_install/lib/: libtsnnls.so.0
