#
# Makefile.am for top level
#

EXTRA_DIST = taucs.pdf \
	     win32/BUILDING.txt \
	     win32/config.h \
             win32/taucs_config_build.h \
	     win32/tsnnls.sln \
             win32/tsnnls.vcproj \
             win32/lib/libraries.txt \
	     COPYING.LESSER

SUBDIRS = tsnnls 
#bin_SCRIPTS = tsnnls-libs
